# libcx

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE
apps/echo/: CMakeLists.txt  echo.cpp
apps/ping/: CMakeLists.txt  main.cpp
base/: CMakeLists.txt
base/srcs/: error.cpp  utils.cpp
base/test/: CMakeLists.txt  args.cpp  basic_buf.cpp  basic_buffer.cpp  error.cpp  function.cpp  main.cpp  mp.cpp  slist.cpp  stdext.cpp  utils.cpp
cx/: CMakeLists.txt  container_of.hpp  cx.cpp  cx.hpp  cxdefine.hpp  error.hpp  service_repository.hpp  services.hpp  slist.hpp
cx.base/: CMakeLists.txt
cx.base/include/cx/base/: defines.hpp  mp.hpp  tuple.hpp  type_list.hpp  utils.hpp
cx.base/srcs/: utils.cpp
cx.base/test/: main.cpp  mp.cpp  utils.cpp
cx/core/: allocators.hpp  basic_buffer.hpp  buffer.hpp  demangle.hpp  function.hpp  math.hpp  mp.hpp  sequence.hpp  tag.hpp  tmp.hpp  tuple_sample.hpp  type_list.hpp  util.cpp  util.hpp
cx/io/: async_layer.hpp  base_op.hpp  basic_buffer.cpp  basic_buffer.hpp  basic_descriptor.hpp  basic_engine.hpp  basic_object.hpp  basic_read_op.hpp  basic_write_op.hpp  engine.hpp  handler_op.hpp  io.hpp  selector.hpp  services.hpp
cx/log/: core.hpp  filter.hpp  formatter.hpp  log.hpp  sink.hpp  source.hpp  writer.hpp
cx/stdext/: removable_priority_queue.hpp
cx/time/: basic_timer.hpp  time.hpp
cx/vision/: bitmap.cpp  bitmap.hpp  canny.cpp  canny.hpp  fft.cpp  fft.hpp  harris.cpp  harris.hpp  hough.cpp  hough.hpp  image.cpp  image.hpp  image_draw.cpp  image_draw.hpp  image_proc.cpp  image_proc.hpp  kernel.hpp  sobel.hpp  vision.hpp
echo/: CMakeLists.txt  echo.cpp
io/: CMakeLists.txt
io/include/cx/io/: basic_engine.hpp  basic_operation.hpp  buffer.hpp  descriptor.hpp  engine.hpp  io.hpp  operation.hpp  services.hpp
io/include/cx/io/internal/: completion_port.hpp  epoll.hpp
io/include/cx/io/ip/: basic_acceptor.hpp  basic_address.hpp  basic_socket.hpp  icmp.hpp  ip.hpp  services.hpp
io/include/cx/io/ip/services/: basic_dgram_service.hpp  basic_service.hpp  basic_stream_service.hpp  win32_overlapped_dgram_service..hpp  win32_overlapped_dgram_service.hpp  win32_overlapped_stream_service..hpp  win32_overlapped_stream_service.hpp
io/include/cx/io/mux/: completion_port.hpp  epoll.hpp  registered_io.hpp
io/include/cx/io/ops/: basic_accept_operation.hpp  basic_connect_operation.hpp  basic_dgram_operation.hpp  basic_io_operation.hpp  basic_read_operation.hpp  basic_write_operation.hpp  handler_operation.hpp
io/include/cx/timer/: basic_timer.hpp  basic_timer_service.hpp
io/sample/echo/: CMakeLists.txt  echo.cpp
io/srcs/: completion_port.cpp  descriptor.cpp  engine.cpp  epoll.cpp  io.cpp  operation.cpp
io/test/: CMakeLists.txt  basic_address.cpp  basic_ops.cpp  basic_socket.cpp  basic_tcp.cpp  basic_timer.cpp  basic_udp.cpp  completion_port.cpp  descriptor.cpp  engine.cpp  epoll.cpp  gprintf.cpp  gprintf.hpp  icmp_ping.cpp  operation.cpp
qt/: qt.pro
qt/app/: app.hpp  app.pro  binarysampledialog.cpp  binarysampledialog.h  binarysampledialog.ui  context.cpp  context.h  fftdialog.cpp  fftdialog.hpp  fftdialog.ui  histogramdialog.cpp  histogramdialog.hpp  histogramdialog.ui  kmeandialog.cpp  kmeandialog.h  kmeandialog.ui  res.qrc  (+7 more)
tests/: CMakeLists.txt  buffer.cpp  cx.cpp  error.cpp  gprintf.hpp  main.cpp  services.cpp  tmp.cpp  vftable.cpp
tests/c++/: arg_type.cpp  concept.cpp  copy_assign.cpp  genseq.cpp  initialize_list.cpp  pack.cpp  seq2.cpp  tree.cpp
tests/core/: buffer.cpp  function.cpp  mp.cpp  sequence.cpp  tmp.cpp  type_list.cpp  util.cpp
tests/io/: basic_engine.cpp
tests/io/ip/: async_layer.cpp  basic_acceptor.cpp  basic_address.cpp  basic_socket.cpp  hdr.cpp  icmp.cpp  ifaddr.cpp  selector.cpp  udp.cpp
tests/log/: core.cpp
tests/time/: timer_service.cpp
(+111 files in other folders)
